k8s/trainingresources/exampleconfigmap.yaml

apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
        - name: config                #Create a mount point called config in a path
          mountPath: "/config"
          readOnly: true
  volumes: # You set volumes at the Pod level, then mount them into containers inside that Pod
    - name: config   # Name must match the one in the volumeMounts
      configMap:
        name: application-cm # Name of the ConfigMap you want to mount.
        # An array of keys from the ConfigMap to create as files
        items:
          - key: "application.properties"   # name of the key in the configmap
            path: "application.properties"  # name of the file that will be created in the mount path
