k8s/trainingresources/examplesecret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
        - name: config                #Create a mount point called config in a path
          mountPath: "/config"
          readOnly: true
  volumes: # You set volumes at the Pod level, then mount them into containers inside that Pod
    - name: config   # Name must match the one in the volumeMounts
      secret:
        secretName: application-secret # Name of the secret you want to mount.
        # An array of keys from the secret to create as files
        items:
          - key: "password"   # name of the key in the configmap
            path: "password"  # name of the file that will be created in the mount path
            mode: 0777  # permissions of the file (minimum required and only for specific users is advised)
