k8s/trainingresources/initcontainerpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-initcontainer
  labels:
    app: myapp
spec:
  containers:
    - name: main-container
      image: busybox
      command: ['sh', '-c', 'echo Inside the main-container! && sleep 36000']
