k8s/trainingresources/servicenodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: MyApp #This label MUST match the label from your pods
  ports:
    - port: 80 # Port that is exposed by the service and the browser/apps will use to communicate.
      targetPort: 80 # Port that is being exposed by the containers in the matching pods
      nodePort: 30007 # Port that will be open in the worker node's, it is Optional if not defined will be defined by k8s.
